--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,16 @@
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
 .liens {
   position: fixed;
   bottom: 10px;
   right: 10px;
 }
+/* z-index ne fonctionne pas */
+
 .contenu {
-  /* position: absolute;
-  right: 50%;
-  bottom: 50%; */
-}
-.apropos {
-  position: absolute;
-  left: 10%;
-  right: 10%;
-  bottom: 40%;
+  position: relative;
+  z-index: 1;
 }
 .header {
   position: fixed;
@@ -22,14 +20,15 @@
 a:link {
   color: black;
   text-decoration: none;
+  font-weight: bold;
 }
 a:visited {
   color: black;
   text-decoration: none;
 }
-
+/* z-index ne fonctionne pas */
+/* https://github.com/processing/p5.js/wiki/Positioning-your-canvas */
 canvas {
-  position: absolute;
-  top: 50px;
-  left: 50px;
+  position: relative;
+  z-index: -1;
 }
